---
source: src/codegen/tests/initialization_test/global_initializers.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%commands = type { i8, i8 }

define i32 @main() {
entry:
  %main = alloca i32, align [filtered]
  %cmd1 = alloca %commands, align [filtered]
  %var1 = alloca i16, align [filtered]
  %cmd2 = alloca %commands, align [filtered]
  %var2 = alloca i16, align [filtered]
  store i16 0, ptr %var1, align [filtered]
  store i16 0, ptr %var2, align [filtered]
  store i32 0, ptr %main, align [filtered]
  %main_ret = load i32, ptr %main, align [filtered]
  ret i32 %main_ret
}
